solved overlapping isssue

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-header{
+header>section{
 	background-color: #81AE40;
 	color: white;
    font-family: 'Merriweather', serif;
